# aiva-ai-video-platform

./: .gitignore  README.md  package-lock.json
Back-end/: API_DOCUMENTATION.md  AccessKey.txt  SH Starter.txt  VIDEO_GENERATION_README.md  diagnose_iam_permissions.py  diagnose_jimeng_permissions.py  main.py  main_backup.py  main_new.py  pyproject.toml  requirements.txt  test_character_generation.py  test_dialogue_digital_human.py  test_hailuo_simple.py
Back-end/Back-end/legacy/: clear_sqlite_tables.py  image_generator.py  jimeng_image_generator.py  test_image_to_image.py  test_shot_image_generation.py  test_white_background_character.py  video_gnt.py  visual_service.py
Back-end/backend/: __init__.py  auth.py  config.py  models.py  routes.py  services.py
Front-end/: Community.html  Generate.html  Generate_old.html  VIDEO_COMBINING_README.md  index.html  login.html  register.html  server.js  start_new_ui.sh  start_server.sh
aiva-nextjs/: PROJECT_SUMMARY.md  README.md  next.config.mjs  package-lock.json  package.json  sh  start.sh  tailwind.config.js  test-build.js
aiva-nextjs/src/app/: globals.css  layout.tsx  page-simple.tsx  page-with-hero.tsx  page.tsx
aiva-nextjs/src/app/community/: page.tsx
aiva-nextjs/src/app/generate/: page.tsx
aiva-nextjs/src/app/test/: page.tsx
aiva-nextjs/src/components/auth/: login-form.tsx  register-form.tsx
aiva-nextjs/src/components/community/: add-post-button.tsx  community-grid.tsx  community-header.tsx  community-stats.tsx
aiva-nextjs/src/components/layout/: footer.tsx  (+1 more)
aiva-nextjs/src/hooks/: use-video-generation.ts
(+26 files in other folders)
